// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pension given salary of 0 (0G) getPension should match snapshot 1`] = `
Object {
  "after": 0,
  "pension": 0,
  "step1": 0,
  "step2": 0,
}
`;

exports[`pension given salary of 0 (0G) should not calculate if include is false 1`] = `
Object {
  "after": 0,
  "pension": 0,
  "step1": 0,
  "step2": 0,
}
`;

exports[`pension given salary of 99858 (1G) getPension should match snapshot 1`] = `
Object {
  "after": 99858,
  "pension": 0,
  "step1": 0,
  "step2": 0,
}
`;

exports[`pension given salary of 99858 (1G) should not calculate if include is false 1`] = `
Object {
  "after": 99858,
  "pension": 0,
  "step1": 0,
  "step2": 0,
}
`;

exports[`pension given salary of 199716 (2G) getPension should match snapshot 1`] = `
Object {
  "after": 197719,
  "pension": 1997,
  "step1": 1997,
  "step2": 0,
}
`;

exports[`pension given salary of 199716 (2G) should not calculate if include is false 1`] = `
Object {
  "after": 199716,
  "pension": 0,
  "step1": 0,
  "step2": 0,
}
`;

exports[`pension given salary of 299574 (3G) getPension should match snapshot 1`] = `
Object {
  "after": 295580,
  "pension": 3994,
  "step1": 3994,
  "step2": 0,
}
`;

exports[`pension given salary of 299574 (3G) should not calculate if include is false 1`] = `
Object {
  "after": 299574,
  "pension": 0,
  "step1": 0,
  "step2": 0,
}
`;

exports[`pension given salary of 699006 (7G) getPension should match snapshot 1`] = `
Object {
  "after": 687024,
  "pension": 11982,
  "step1": 11982,
  "step2": 0,
}
`;

exports[`pension given salary of 699006 (7G) should not calculate if include is false 1`] = `
Object {
  "after": 699006,
  "pension": 0,
  "step1": 0,
  "step2": 0,
}
`;

exports[`pension given salary of 708991 (7.1G) getPension should match snapshot 1`] = `
Object {
  "after": 696809,
  "pension": 12182,
  "step1": 12182,
  "step2": 0,
}
`;

exports[`pension given salary of 708991 (7.1G) should not calculate if include is false 1`] = `
Object {
  "after": 708991,
  "pension": 0,
  "step1": 0,
  "step2": 0,
}
`;

exports[`pension given salary of 798864 (8G) getPension should match snapshot 1`] = `
Object {
  "after": 784885,
  "pension": 13979,
  "step1": 12182,
  "step2": 1797,
}
`;

exports[`pension given salary of 798864 (8G) should not calculate if include is false 1`] = `
Object {
  "after": 798864,
  "pension": 0,
  "step1": 0,
  "step2": 0,
}
`;

exports[`pension given salary of 1098438 (11G) getPension should match snapshot 1`] = `
Object {
  "after": 1078468,
  "pension": 19970,
  "step1": 12182,
  "step2": 7788,
}
`;

exports[`pension given salary of 1098438 (11G) should not calculate if include is false 1`] = `
Object {
  "after": 1098438,
  "pension": 0,
  "step1": 0,
  "step2": 0,
}
`;

exports[`pension given salary of 1198296 (12G) getPension should match snapshot 1`] = `
Object {
  "after": 1176328,
  "pension": 21968,
  "step1": 12182,
  "step2": 9786,
}
`;

exports[`pension given salary of 1198296 (12G) should not calculate if include is false 1`] = `
Object {
  "after": 1198296,
  "pension": 0,
  "step1": 0,
  "step2": 0,
}
`;

exports[`pension given salary of 1497870 (15G) getPension should match snapshot 1`] = `
Object {
  "after": 1475902,
  "pension": 21968,
  "step1": 12182,
  "step2": 9786,
}
`;

exports[`pension given salary of 1497870 (15G) should not calculate if include is false 1`] = `
Object {
  "after": 1497870,
  "pension": 0,
  "step1": 0,
  "step2": 0,
}
`;

exports[`pension should have defaults matching snapshot 1`] = `
Object {
  "pension": Object {
    "include": true,
    "step1": Object {
      "rate": 2,
      "threshold": Object {
        "high": 708991,
        "low": 99858,
      },
    },
    "step2": Object {
      "rate": 2,
      "threshold": Object {
        "high": 1198296,
        "low": 708991,
      },
    },
  },
}
`;
